--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hgvs-parser"
+name = "pyhgvs2"
 version = "1.0.0"
 description = "Fork of pyhgvs"
 readme = "README.md"
@@ -10,6 +10,8 @@ dependencies = []
 dev = [
     "pyfaidx>=0.8.1.4",
     "pytest-mock>=3.14.0",
+    "ruff>=0.11.11",
+    "mypy>=1.15.0"
 ]
 
 [tool.mypy]
