--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Linting
+name: Linting and Testing
 on: [pull_request, workflow_dispatch]
 jobs:
   lint:
@@ -6,8 +6,8 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.10"
-          - "3.11"
+          # - "3.10"
+          # - "3.11"
           - "3.12"
 
     steps:
@@ -25,6 +25,5 @@ jobs:
         run: uv sync --locked --all-extras --dev
 
       - name: Run tests
-        run: uv run pytest tests
-
+        run: uv run pytest pyhgvs/tests
 
