--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,5 +27,5 @@ jobs:
         run: uv sync --locked --all-extras --dev
 
       - name: Run tests
-        run: uv run pytest pyhgvs/tests
+        run: uv run pytest pyhgvs/tests -W error
 
