--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,8 +6,12 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - "3.9"
-          - "3.10"
+          # - "3.5"
+          # - "3.6"
+          # - "3.7"
+          # - "3.8"
+          # - "3.9"
+          # - "3.10"
           - "3.11"
           - "3.12"
           - "3.13"
@@ -27,5 +31,5 @@ jobs:
         run: uv sync --locked --all-extras --dev
 
       - name: Run tests
-        run: uv run pytest pyhgvs/tests -W error
+        run: uv run pytest pyhgvs/tests
 
