--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ name = "pyhgvs2"
 version = "1.0.0"
 description = "Fork of pyhgvs"
 readme = "README.md"
-requires-python = ">=3.5"
+requires-python = ">=3.9"
 dependencies = []
 
 [dependency-groups]
 dev = [
-    "pyfaidx",
-    "pytest-mock",
-    "ruff",
-    "mypy"
+    "pyfaidx==0.8.1.*",
+    "pytest-mock==3.14.*",
+    "ruff==0.11.*",
+    "mypy==1.15.*"
 ]
 
 [tool.mypy]
