--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,6 +7,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     environment: deploy
+    permissions:
+      id-token: write
 
     steps:
       - name: Checkout
