--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "pyhgvs"
+        "pyhgvs2"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
