--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,19 +9,51 @@ jobs:
     environment: deploy
     permissions:
       id-token: write
+      contents: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Update CHANGELOG
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ github.token }}
+          tag: ${{ github.ref_name }}
+        
       - name: Install uv
         uses: astral-sh/setup-uv@v5
+        
       - name: Install project
         run: uv sync --locked --all-extras --dev
+
       - name: Run tests
         run: uv run pytest pyhgvs2/tests
+
       - name: Build
         run: uv build
+
       - name: Publish
         run: uv publish
+
       - name: Test import 
         run: uv run --with pyhgvs2 --no-project -- python -c "import pyhgvs2"
+      
+      - name: Commit CHANGELOG.md
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
+          file_pattern: CHANGELOG.md
+
+      # - name: Create Release
+      #   uses: ncipollo/release-action@v1.12.0
+      #   with:
+      #     allowUpdates: true
+      #     draft: false
+      #     makeLatest: true
+      #     name: ${{ github.ref_name }}
+      #     body: ${{ steps.changelog.outputs.changes }}
+      #     token: ${{ github.token }}
+
